--- a/showmiiminiproject/package.json
+++ b/showmiiminiproject/package.json
@@ -14,7 +14,9 @@
     "axios": "^1.5.1",
     "bootstrap": "^5.3.2",
     "bootstrap-icons": "^1.11.1",
-    "json-server": "^0.17.4",
+    "firebase": "^10.5.0",
+    "json-server": "^0.17.0",
+    "openai": "^4.14.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-loader-spinner": "^5.4.5",
