--- a/showmiiminiproject/package.json
+++ b/showmiiminiproject/package.json
@@ -14,6 +14,7 @@
     "axios": "^1.5.1",
     "bootstrap": "^5.3.2",
     "bootstrap-icons": "^1.11.1",
+    "dotenv": "^16.3.1",
     "firebase": "^10.5.0",
     "json-server": "^0.17.0",
     "openai": "^4.14.1",
